# CommitVisualizer

./: CMakeLists.txt  commitVisualizer.sh  install.sh
source/: main.cpp  prettyPrinter.hpp  utils.hpp
source/Class/Commit/: Commit.cpp  Commit.hpp
source/Class/CommitHandler/: CommitsHandler.cpp  CommitsHandler.hpp
source/Class/Contributor/: Contributor.cpp  Contributor.hpp
